examples/test/testpolicy19898.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19898
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key41: value0
      key26: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value46
          key22: value33
          key31: value36
      podSelector:
        matchLabels:
          key22: value42
          key13: value1
